# shrdlu-world

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
shrdlu_blocks/: __init__.py  client.py
shrdlu_blocks/simulator/: server.py
