[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shrdlu-world"
version = "0.1.1"
description = "Small standalone tabletop blocks-world simulator."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "cat-claws" },
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
shrdlu-simulator = "shrdlu_blocks.simulator.demo:demo"

[project.urls]
Homepage = "https://github.com/cat-claws/shrdlu-world"

[tool.setuptools.packages.find]
include = ["shrdlu_blocks*"]

[tool.setuptools.package-data]
shrdlu_blocks = ["viewer/web_static/*"]
